fixed card text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -3,40 +3,15 @@ body {
   padding: 0;
 }
 
-p {
+p, img {
   display: grid; 
   margin-left: auto; 
   margin-right: auto; 
   width: 100%; 
+  text-align: center; 
 }
 
-p.cardStyles {
-  display: grid; 
-  justify-content: center; 
-}
 
-/* .cardCityTitle {
-  justify-content: 'center'; 
-  text-align: center; 
-  margin-right: auto; 
-  margin-left: auto;  
-  color: green; 
-  width: 100%; 
-} */
-
-/* 
-.currentTemp {
-  text-align: center;
-  margin: 0 auto; 
-  width: 100%; 
-} */
-
-
-/* 
-.nowWeather {
-  margin: 0 auto; 
-  text-align: center; 
-} */
 
 
 .MuiBox-root css-k008qs {
